--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -16,6 +16,7 @@
 @using Client.Web.Utilities.Dtos;
 @using Client.Web.Utilities.Models;
 @using Client.Web.Utilities.Constants;
+@using Client.Web.Utilities.Services;
 
 @using Clients.Web.Components.Components.Notifications;
 @using Clients.Web.Components.Components.Grid;
@@ -28,6 +29,7 @@
 @using Clients.Web.Components.Components.Navigators;
 @using Clients.Web.Components.Components.Typography;
 @using Clients.Web.Components.Components.Forms;
+@using Clients.Web.Components.Components.Modals
 
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.Forms;
