--- a/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
+++ b/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
@@ -138,12 +138,14 @@ h1:focus {
 
 .fm-sidebar__nav {
     background-color: #7150eb !important;
+    box-shadow: 0 10px 12px rgba(113, 80, 235, 0.3);
     border-radius: 10px;
     height: 100%;
 }
 
 .fm-sidebar__user {
     background-color: #f2f2fd !important;
+    box-shadow: 0 10px 12px rgba(242, 242, 253, 0.5);
     border-radius: 10px;
     height: 100%;
     padding-inline: 2rem;
@@ -156,6 +158,7 @@ h1:focus {
 .e-sidebar {
     background-color: var(--color-white) !important;
     padding: 2.5rem;
+    overflow: visible;
 }
 
 .fm-typography__display-1 {
@@ -246,4 +249,10 @@ h1:focus {
 
 .fm-bg-color__danger {
     background-color: rgb(255, 79, 79);
+}
+
+.fm-sidebar__icon {
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: var(--color-text);
 }
